--- a/AIML_ASSIGNMENT_2.ipynb
+++ b/AIML_ASSIGNMENT_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMf6vLFFFjwPLq/s1rwdIFP",
+      "authorship_tag": "ABX9TyNPO4pHyJs6ngk5yVPv3i1q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/2303A51739/AIML-1739-/blob/main/AIML_ASSIGNMENT_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lab-02: Implement AI Search"
+      ],
+      "metadata": {
+        "id": "EuH1V0Bw4sE6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Implement Breadth First Search Algorithm"
+      ],
+      "metadata": {
+        "id": "OZ_1dw1y43at"
+      }
     },
     {
       "cell_type": "code",
@@ -69,6 +87,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Implement Depth First Search Algorithm"
+      ],
+      "metadata": {
+        "id": "tUmYL1l74-uY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "graph1 = {\n",
@@ -110,6 +137,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Implementation of A* Algorithm / OR Graph Search"
+      ],
+      "metadata": {
+        "id": "tbGgSa5E5D9x"
+      }
     },
     {
       "cell_type": "code",
